--- a/configure.in
+++ b/configure.in
@@ -280,27 +280,15 @@ AC_DEFUN(CHECK_KERNEL_HEADER, [
   else
     AC_MSG_RESULT("no")
     if test ! -f include/$1; then
-      echo "Creating a dummy <$1>..."
-      mkdir -p include/linux
-      touch include/$1
-    fi
-  fi
-])
-
-AC_DEFUN(CHECK_AND_REPLACE_KERNEL_HEADER, [
-  AC_MSG_CHECKING(for kernel $1)
-  if test -f "$CONFIG_SND_KERNELDIR/include/$1"; then
-    AC_MSG_RESULT("yes")
-    if test -f include/$1; then
-      echo "Removing a dummy $1."
-      rm -f include/$1
-    fi
-  else
-    AC_MSG_RESULT("no")
-    if test ! -f include/$1; then
-      echo "Creating a dummy <$1> which points to <$2>..."
-      mkdir -p include/linux
-      echo "#include <$2>" > include/$1
+      if test -z "$2" ; then
+        echo "Creating a dummy <$1>..."
+        mkdir -p include/linux
+        touch include/$1
+      else
+        echo "Creating <$1>..."
+        mkdir -p include/linux
+        echo "$2" > include/$1
+      fi
     fi
   fi
 ])
@@ -352,11 +340,17 @@ if test ! -f include/linux/workqueue.h; then
   fi
 fi
 CHECK_KERNEL_HEADER(asm/hw_irq.h)
-CHECK_AND_REPLACE_KERNEL_HEADER(linux/jiffies.h, linux/sched.h)
+CHECK_KERNEL_HEADER(linux/jiffies.h, [#include <linux/sched.h>
+])
+CHECK_KERNEL_HEADER(linux/compat.h, [#include \"compat_64.h\"
+])
 dnl PPC headers (for 2.2 kernels)
-CHECK_AND_REPLACE_KERNEL_HEADER(linux/adb.h, asm/adb.h)
-CHECK_AND_REPLACE_KERNEL_HEADER(linux/cuda.h, asm/cuda.h)
-CHECK_AND_REPLACE_KERNEL_HEADER(linux/pmu.h, asm/pmu.h)
+CHECK_KERNEL_HEADER(linux/adb.h, [#include <asm/adb.h>
+])
+CHECK_KERNEL_HEADER(linux/cuda.h, [#include <asm/cuda.h>
+])
+CHECK_KERNEL_HEADER(linux/pmu.h, [#include <asm/pmu.h>
+])
 
 dnl Check for modversions...
 CHECK_KERNEL_CONFIG(CONFIG_MODVERSIONS, [kernel module symbol versions])
