Added pcmcia compatible routines for 2.5

--- a/pcmcia/vx/Makefile
+++ b/pcmcia/vx/Makefile
@@ -7,6 +7,8 @@ include $(TOPDIR)/Makefile.conf
 #
 #
 
+export-objs = vx_entry.o
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/pcmcia/vx/Makefile
 
