--- a/pci/ice1712/Makefile
+++ b/pci/ice1712/Makefile
@@ -3,6 +3,8 @@ TOPDIR = ../..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+export-objs = ak4xxx.o
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/pci/ice1712/Makefile
 
