--- a/pci/cs46xx/Makefile
+++ b/pci/cs46xx/Makefile
@@ -7,7 +7,11 @@ include $(TOPDIR)/Makefile.conf
 EXTRA_CFLAGS = -DCONFIG_SND_CS46XX_NEW_DSP=1
 CONFIG_SND_CS46XX_NEW_DSP=y
 
+EXTRA_CLEAN = cs46xx.c
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/pci/cs46xx/Makefile
 
 include $(TOPDIR)/Rules.make
+
+cs46xx.c: cs46xx.patch $(TOPDIR)/alsa-kernel/pci/cs46xx/cs46xx.c
