Added pdaudiocf driver

--- a/i2c/Makefile
+++ b/i2c/Makefile
@@ -3,6 +3,9 @@ TOPDIR = ..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+extra-subdir-y  := other
+extra-subdir-m  := $(extra-subdir-y)
+
 export-objs  := i2c.o cs8427.o tea6330t.o
 
 TOPDIR = $(MAINSRCDIR)
