--- a/pcmcia/Makefile
+++ b/pcmcia/Makefile
@@ -8,6 +8,9 @@ include $(TOPDIR)/Makefile.conf
 #
 
 TOPDIR = $(MAINSRCDIR)
+
+obj-$(CONFIG_SND) += pdaudiocf/
+
 include $(TOPDIR)/alsa-kernel/pcmcia/Makefile
 
 include $(TOPDIR)/Rules.make
