fixed the compilation on 2.6 kernel. the compatible layer patch is supplied now.

--- a/pcmcia/vx/Makefile
+++ b/pcmcia/vx/Makefile
@@ -3,6 +3,8 @@ TOPDIR = ../..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+EXTRA_CLEAN = vx_entry.c
+
 #
 #
 #
@@ -13,3 +15,5 @@ TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/pcmcia/vx/Makefile
 
 include $(TOPDIR)/Rules.make
+
+vx_entry.c: vx_entry.patch vx_entry.inc vx_entry.inc1 $(TOPDIR)/alsa-kernel/pcmcia/vx/vx_entry.c
