fixed the compilation on 2.2 and 2.6 kernels.
us428 driver has bunch of ifdefs, so far.
we'll need to clean up later (maybe after integration with
the core usbaudio.c).

--- a/usb/Makefile
+++ b/usb/Makefile
@@ -11,7 +11,7 @@ extra-snd-usb-audio-objs := usbcompat.o
 extra-subdir-y := us428
 extra-subdir-m	:= $(extra-subdir-y)
 
-export-objs := usbmidi.o
+export-objs := usbaudio.o usbmidi.o
 
 TOPDIR = $(MAINSRCDIR)
 
