--- a/include/config.h.in
+++ b/include/config.h.in
@@ -33,6 +33,7 @@
 #undef CONFIG_HAVE_STRLCPY
 #undef CONFIG_HAVE_SNPRINTF
 #undef CONFIG_HAVE_VMALLOC_TO_PAGE
+#undef CONFIG_HAVE_PDE
 
 /* 2.2 kernels */
 #undef CONFIG_OLD_KILL_FASYNC
