--- a/pci/Kconfig
+++ b/pci/Kconfig
@@ -11,3 +11,21 @@ config SND_MIXART
 	help
 	  Say 'Y' or 'M' to include support for Digigram miXart soundcard.
 
+config SND_AU8810
+        tristate "Aureal Advantage"
+        depends on SND
+        help
+          Say 'Y' or 'M' to include support for Aureal Advatage soundcards.
+ 
+config SND_AU8820
+        tristate "Aureal Vortex"
+        depends on SND
+        help
+          Say 'Y' or 'M' to include support for Aureal Vortex soundcards.
+ 
+config SND_AU8830
+        tristate "Aureal Vortex 2"
+        depends on SND
+        help
+          Say 'Y' or 'M' to include support for Aureal Vortex 2 soundcards.
+ 
