--- a/configure.in
+++ b/configure.in
@@ -4,7 +4,7 @@ dnl Copyright (c) by Jaroslav Kysela <perex@suse.cz>
 
 AC_INIT(acore/sound.patch)
 AC_PREFIX_DEFAULT(/usr)
-CONFIG_SND_VERSION="0.9.7a"
+CONFIG_SND_VERSION="0.9.7b"
 
 dnl Checks for programs.
 AC_PROG_CC
