--- a/configure.in
+++ b/configure.in
@@ -1029,10 +1029,11 @@ AC_TRY_COMPILE([
 #include "$CONFIG_SND_KERNELDIR/include/linux/fs.h"
 #include "$CONFIG_SND_KERNELDIR/include/linux/proc_fs.h"
 ],[
-	PDE(NULL);
+	struct proc_dir_entry * (*func)();
+	func = PDE;
 ],
-    AC_MSG_RESULT("no");pde_defined="0",
     AC_MSG_RESULT("yes");pde_defined="1",
+    AC_MSG_RESULT("no");pde_defined="0",
     AC_MSG_RESULT("unknown");pde_defined="0"
 )
 CFLAGS=$ac_save_CFLAGS
