--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -16,8 +16,11 @@ GENKSYMS	= @GENKSYMS@
 mainsrcdir	= @srcdir@
 MAINSRCDIR	= @SRCDIR@
 prefix		= @prefix@
+exec_prefix	= @exec_prefix@
 sysconfdir	= @sysconfdir@
+bindir		= @bindir@
 sbindir		= @sbindir@
+mandir		= @mandir@
 moddir		= @moddir@
 moddir_tree	= @moddir_tree@
 c_opts		= @c_opts@
