added the missing clean-up of patched c file.

--- a/pci/nm256/Makefile
+++ b/pci/nm256/Makefile
@@ -3,7 +3,11 @@ TOPDIR = ../..
 include $(TOPDIR)/toplevel.config
 include $(TOPDIR)/Makefile.conf
 
+EXTRA_CLEAN = nm256.c
+
 TOPDIR = $(MAINSRCDIR)
 include $(TOPDIR)/alsa-kernel/pci/nm256/Makefile
 
 include $(TOPDIR)/Rules.make
+
+nm256.c: nm256.patch $(TOPDIR)/alsa-kernel/pci/nm256/nm256.c
