--- a/acore/oss/Makefile
+++ b/acore/oss/Makefile
@@ -1,18 +1,16 @@
-TOPDIR = ../..
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
-
-EXTRA_CLEAN = mixer_oss.c pcm_oss.c
+clean-files := mixer_oss.c pcm_oss.c
 
 export-objs  := mixer_oss.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/core/oss/Makefile
+include $(SND_TOPDIR)/alsa-kernel/core/oss/Makefile
 
-EXTRA_CFLAGS = -I$(TOPDIR)/alsa-kernel/core/oss
+EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/core/oss
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
 
-mixer_oss.c: mixer_oss.patch $(TOPDIR)/alsa-kernel/core/oss/mixer_oss.c
-pcm_oss.c: pcm_oss.patch $(TOPDIR)/alsa-kernel/core/oss/pcm_oss.c
+mixer_oss.c: mixer_oss.patch $(SND_TOPDIR)/alsa-kernel/core/oss/mixer_oss.c
+pcm_oss.c: pcm_oss.patch $(SND_TOPDIR)/alsa-kernel/core/oss/pcm_oss.c
+
