--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,7 +1,5 @@
-TOPDIR = ..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 # ALSA extra definitions
 
@@ -10,7 +8,6 @@ snd-serialmidi-objs := serialmidi.o
 obj-$(CONFIG_SND_SERIALMIDI) += snd-serialmidi.o
 
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/drivers/Makefile
+include $(SND_TOPDIR)/alsa-kernel/drivers/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
