--- a/drivers/mpu401/Makefile
+++ b/drivers/mpu401/Makefile
@@ -1,7 +1,5 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 obj-$(CONFIG_SND_AU8810) += snd-mpu401-uart.o
 obj-$(CONFIG_SND_AU8820) += snd-mpu401-uart.o
@@ -9,7 +7,6 @@ obj-$(CONFIG_SND_AU8830) += snd-mpu401-uart.o
 
 export-objs  := mpu401_uart.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/drivers/mpu401/Makefile
+include $(SND_TOPDIR)/alsa-kernel/drivers/mpu401/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
