--- a/i2c/other/Makefile
+++ b/i2c/other/Makefile
@@ -1,7 +1,5 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs += ak4xxx-adda.o ak4117.o
 
@@ -10,7 +8,6 @@ snd-ak4117-objs := ak4117.o
 # Toplevel Module Dependency
 obj-$(CONFIG_SND_PDAUDIOCF) += snd-ak4117.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/i2c/other/Makefile
+include $(SND_TOPDIR)/alsa-kernel/i2c/other/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
