--- a/include/config.h.in
+++ b/include/config.h.in
@@ -7,10 +7,10 @@
 /* ALSA section */
 #undef CONFIG_SND_VERSION
 #undef CONFIG_SND_ISA
-#undef CONFIG_SND_SEQUENCER
+#undef CONFIG_SND_SEQUENCER_MODULE
 #undef CONFIG_SND_OSSEMUL
-#undef CONFIG_SND_MIXER_OSS
-#undef CONFIG_SND_PCM_OSS
+#undef CONFIG_SND_MIXER_OSS_MODULE
+#undef CONFIG_SND_PCM_OSS_MODULE
 #undef CONFIG_SND_SEQUENCER_OSS
 #undef CONFIG_SND_VERBOSE_PRINTK
 #undef CONFIG_SND_DEBUG
