--- a/isa/cs423x/Makefile
+++ b/isa/cs423x/Makefile
@@ -1,14 +1,10 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
-
-TOPDIR = $(MAINSRCDIR)
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs  := cs4231_lib.o cs4236_lib.o
 
 isapnp-files := cs4232.isapnp cs4236.isapnp 
 
-include $(TOPDIR)/alsa-kernel/isa/cs423x/Makefile
+include $(SND_TOPDIR)/alsa-kernel/isa/cs423x/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
