--- a/isa/sb/Makefile
+++ b/isa/sb/Makefile
@@ -1,17 +1,14 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 # Hack for SB16 CSP
-EXTRA_CFLAGS = -DCONFIG_SND_SB16_CSP=1
+EXTRA_CFLAGS += -DCONFIG_SND_SB16_CSP=1
 CONFIG_SND_SB16_CSP=y
 
 export-objs  := emu8000.o sb_common.o sb8_main.o sb16_main.o sb16_csp.o
 
 isapnp-files := es968.isapnp sb16.isapnp sbawe.isapnp
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/isa/sb/Makefile
+include $(SND_TOPDIR)/alsa-kernel/isa/sb/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
