--- a/pci/ac97/Makefile
+++ b/pci/ac97/Makefile
@@ -1,7 +1,5 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 obj-$(CONFIG_SND_AU8810) += snd-ac97-codec.o
 obj-$(CONFIG_SND_AU8820) += snd-ac97-codec.o
@@ -9,7 +7,6 @@ obj-$(CONFIG_SND_AU8830) += snd-ac97-codec.o
 
 export-objs  := ac97_codec.o ak4531_codec.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/pci/ac97/Makefile
+include $(SND_TOPDIR)/alsa-kernel/pci/ac97/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
