--- a/pci/au88x0/Makefile
+++ b/pci/au88x0/Makefile
@@ -1,7 +1,5 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 snd-au8810-objs := au8810.o au8810_core.o au8810_pcm.o au8810_mixer.o au8810_mpu401.o au8810_game.o au8810_eq.o
 snd-au8820-objs := au8820.o au8820_core.o au8820_pcm.o au8820_mixer.o au8820_mpu401.o au8820_game.o au8820_synth.o
@@ -11,4 +9,4 @@ obj-$(CONFIG_SND_AU8810) += snd-au8810.o
 obj-$(CONFIG_SND_AU8820) += snd-au8820.o
 obj-$(CONFIG_SND_AU8830) += snd-au8830.o
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
