--- a/pci/mixart/Makefile
+++ b/pci/mixart/Makefile
@@ -1,16 +1,12 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 #
 #
 #
-
-TOPDIR = $(MAINSRCDIR)
 
 snd-mixart-objs := mixart.o mixart_core.o mixart_hwdep.o mixart_mixer.o
 
 obj-$(CONFIG_SND_MIXART) += snd-mixart.o
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
