--- a/pci/rme9652/Makefile
+++ b/pci/rme9652/Makefile
@@ -1,9 +1,6 @@
-TOPDIR = ../..
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/alsa-kernel/pci/rme9652/Makefile
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/pci/rme9652/Makefile
-
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
