--- a/ppc/Makefile
+++ b/ppc/Makefile
@@ -1,16 +1,13 @@
-TOPDIR = ..
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+clean-files := awacs.c pmac.c
 
-EXTRA_CLEAN = awacs.c pmac.c
+include $(SND_TOPDIR)/alsa-kernel/ppc/Makefile
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/ppc/Makefile
+EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/ppc
 
-EXTRA_CFLAGS = -I$(TOPDIR)/alsa-kernel/ppc
+include $(SND_TOPDIR)/Rules.make
 
-include $(TOPDIR)/Rules.make
-
-awacs.c: awacs.patch $(TOPDIR)/alsa-kernel/ppc/awacs.c
-pmac.c: pmac.patch $(TOPDIR)/alsa-kernel/ppc/pmac.c
+awacs.c: awacs.patch $(SND_TOPDIR)/alsa-kernel/ppc/awacs.c
+pmac.c: pmac.patch $(SND_TOPDIR)/alsa-kernel/ppc/pmac.c
