--- a/i2c/Makefile
+++ b/i2c/Makefile
@@ -1,14 +1,11 @@
-TOPDIR = ..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 extra-subdir-y  := other
 extra-subdir-m  := $(extra-subdir-y)
 
 export-objs  := i2c.o cs8427.o tea6330t.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/i2c/Makefile
+include $(SND_TOPDIR)/alsa-kernel/i2c/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
