--- a/i2c/l3/Makefile
+++ b/i2c/l3/Makefile
@@ -1,11 +1,8 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs += uda1341.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/i2c/l3/Makefile
+include $(SND_TOPDIR)/alsa-kernel/i2c/l3/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
