--- a/isa/ad1816a/Makefile
+++ b/isa/ad1816a/Makefile
@@ -1,13 +1,10 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs  := ad1816a_lib.o
 
 isapnp-files := ad1816a.isapnp
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/isa/ad1816a/Makefile
+include $(SND_TOPDIR)/alsa-kernel/isa/ad1816a/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
