--- a/isa/ad1848/Makefile
+++ b/isa/ad1848/Makefile
@@ -1,11 +1,8 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs  := ad1848_lib.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/isa/ad1848/Makefile
+include $(SND_TOPDIR)/alsa-kernel/isa/ad1848/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
