--- a/isa/opti9xx/Makefile
+++ b/isa/opti9xx/Makefile
@@ -1,11 +1,8 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 isapnp-files = opti92x-ad1848.isapnp opti92x-cs4231.isapnp opti93x.isapnp
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/isa/opti9xx/Makefile
+include $(SND_TOPDIR)/alsa-kernel/isa/opti9xx/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
