--- a/parisc/Makefile
+++ b/parisc/Makefile
@@ -1,7 +1,6 @@
-TOPDIR = ../..
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/alsa-kernel/parisc/Makefile
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
