--- a/pci/emu10k1/Makefile
+++ b/pci/emu10k1/Makefile
@@ -1,11 +1,8 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs  := emu10k1_main.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/pci/emu10k1/Makefile
+include $(SND_TOPDIR)/alsa-kernel/pci/emu10k1/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
