--- a/pci/ice1712/Makefile
+++ b/pci/ice1712/Makefile
@@ -1,11 +1,8 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 export-objs = ak4xxx.o
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/pci/ice1712/Makefile
+include $(SND_TOPDIR)/alsa-kernel/pci/ice1712/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
