--- a/pci/pdplus/Makefile
+++ b/pci/pdplus/Makefile
@@ -3,22 +3,16 @@
 # Copyright (c) 2001 by Jaroslav Kysela <perex@suse.cz>
 #
 
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
-
-TOPDIR = $(MAINSRCDIR)
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 #
 #
 #
-
-O_TARGET     := _pdplus.o
 
 snd-pdplus-objs := pdplus.o
 
 # Toplevel Module Dependency
 obj-$(CONFIG_SND_PDPLUS) += snd-pdplus.o
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
