--- a/pci/vx222/Makefile
+++ b/pci/vx222/Makefile
@@ -1,13 +1,10 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 #
 #
 #
 
-TOPDIR = $(MAINSRCDIR)
-include $(TOPDIR)/alsa-kernel/pci/vx222/Makefile
+include $(SND_TOPDIR)/alsa-kernel/pci/vx222/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
