--- a/pcmcia/Makefile
+++ b/pcmcia/Makefile
@@ -1,18 +1,14 @@
-TOPDIR = ..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 #
 #
 #
-
-TOPDIR = $(MAINSRCDIR)
 
 obj-$(CONFIG_SND) += pdaudiocf/
 
-include $(TOPDIR)/alsa-kernel/pcmcia/Makefile
+include $(SND_TOPDIR)/alsa-kernel/pcmcia/Makefile
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
 
 
