--- a/pcmcia/pdaudiocf/Makefile
+++ b/pcmcia/pdaudiocf/Makefile
@@ -1,16 +1,12 @@
-TOPDIR = ../..
-
-include $(TOPDIR)/toplevel.config
-include $(TOPDIR)/Makefile.conf
+include $(SND_TOPDIR)/toplevel.config
+include $(SND_TOPDIR)/Makefile.conf
 
 #
 #
 #
-
-TOPDIR = $(MAINSRCDIR)
 
 snd-pdaudiocf-objs := pdaudiocf.o pdaudiocf_core.o pdaudiocf_irq.o pdaudiocf_pcm.o
 
 obj-$(CONFIG_SND_PDAUDIOCF) += snd-pdaudiocf.o
 
-include $(TOPDIR)/Rules.make
+include $(SND_TOPDIR)/Rules.make
